--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b1220" />
   <meta name="color-scheme" content="dark" />
-  <title>Vitals Tracker</title>
+  <title>Vitals Tracker v1.06</title>
 
   <!-- PWA: manifest (single-file via data: URI) -->
   <link id="manifestLink" rel="manifest" href="" />
