--- a/index.html
+++ b/index.html
@@ -200,54 +200,35 @@
       .grid3 .forceRow{ grid-column: 1 / -1; }
     }
 
+    /* Add screen time line: larger, more prominent */
     .nowline{
-      font-size: var(--small);
-      color: var(--muted2);
-      margin: 6px 2px 10px;
+      font-size: 18px;
+      font-weight: 750;
+      color: rgba(216,224,240,.88);
+      margin: 4px 2px 10px;
       letter-spacing: .2px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
-    /* ADD: buttons bottom-fixed */
-    .addPadBottom{
-      padding-bottom: 78px; /* room for bottom bar */
-    }
-    .bottomBar{
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 50;
-      background: linear-gradient(180deg, rgba(11,18,32,.70), rgba(11,18,32,.96));
-      border-top: 1px solid rgba(46,62,92,.55);
-      padding: 10px 14px calc(10px + env(safe-area-inset-bottom));
-      backdrop-filter: blur(10px);
-    }
-    .bottomBarInner{
-      max-width: 860px;
-      margin: 0 auto;
-      display:flex;
-      gap: 10px;
-    }
-    .bottomBarInner .btn{
-      flex: 1 1 0;
-      min-width: 0;
-    }
-
-    .symptomsWrap{ margin-top: 6px; padding-top: 2px; }
+    /* Symptoms: tightened substantially */
+    .symptomsWrap{ margin-top: 2px; padding-top: 0; }
     .symptomsGrid{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: 6px 14px;
+      gap: 2px 14px;          /* tighter row gap */
       align-items:center;
     }
     .symRow{
       display:flex;
       align-items:center;
       gap: 10px;
-      padding: 2px 0;
-      margin: 0;
+      padding: 0;            /* remove vertical padding */
+      margin: 0;             /* remove margins */
       cursor:pointer;
       user-select:none;
+      line-height: 1.15;     /* tighter line height */
     }
     .symRow input[type="checkbox"]{
       appearance:none;
@@ -356,12 +337,23 @@
     }
     canvas{ width:100%; height:260px; display:block; }
 
-    /* Home footer version */
     .homeVersion{
       margin-top: 6px;
       font-size: 11px;
       color: rgba(154,168,196,.75);
       letter-spacing: .15px;
+    }
+
+    /* Add screen buttons: directly below symptoms list */
+    .addButtons{
+      margin-top: 12px;
+      display:flex;
+      gap: 10px;
+      flex-wrap: nowrap;
+    }
+    .addButtons .btn{
+      flex: 1 1 0;
+      min-width: 0;
     }
   </style>
 </head>
@@ -379,11 +371,10 @@
         <button class="btn btnBig" id="goCharts">Charts</button>
       </div>
 
-      <!-- Export left / Exit right -->
+      <!-- Home: no Export at all -->
       <div class="toolbar spread" style="margin-top:14px;">
         <div class="leftGroup">
           <button class="btn ghost hidden" id="btnInstall">Install</button>
-          <button class="btn ghost" id="btnExportFromHome">Export</button>
         </div>
         <div class="rightGroup">
           <button class="btn ghost" id="btnExitHome">Exit</button>
@@ -396,8 +387,8 @@
     </div>
 
     <!-- ADD -->
-    <div id="screenAdd" class="card hidden addPadBottom" style="margin-top:14px;">
-      <div class="nowline" id="nowLine">08:23:49 PM, 12/23/2025</div>
+    <div id="screenAdd" class="card hidden" style="margin-top:14px;">
+      <div class="nowline" id="nowLine">09:38:26 PM, 12/23/2025</div>
 
       <div class="grid3">
         <div>
@@ -421,12 +412,19 @@
       <div class="symptomsWrap">
         <div class="symptomsGrid" id="symptomsGrid"></div>
       </div>
+
+      <!-- Buttons: just below symptoms list -->
+      <div class="addButtons">
+        <button class="btn primary" id="saveAdd">Save</button>
+        <button class="btn" id="backFromAdd">Back</button>
+        <button class="btn ghost" id="exitFromAdd">Exit</button>
+      </div>
     </div>
 
     <!-- LOG -->
     <div id="screenLog" class="card hidden" style="margin-top:14px;">
       <div class="toolbar">
-        <button class="btn primary" id="btnExport">Export</button>
+        <button class="btn primary" id="btnExportLog" style="display:none;">Export</button>
         <button class="btn" id="backFromLog">Back</button>
         <button class="btn ghost" id="exitFromLog">Exit</button>
       </div>
@@ -434,14 +432,15 @@
       <div class="sectionTitle">Search</div>
       <input id="searchBox" placeholder="Type a word: sweaty, dizzy, headache..." />
 
+      <!-- Calendar range (no dropdowns) -->
       <div class="logControls">
         <div>
           <div class="smallLabel">From</div>
-          <select id="fromDate"></select>
+          <input id="fromDate" type="date" />
         </div>
         <div>
           <div class="smallLabel">To</div>
-          <select id="toDate"></select>
+          <input id="toDate" type="date" />
         </div>
       </div>
 
@@ -452,25 +451,30 @@
     <!-- CHARTS -->
     <div id="screenCharts" class="card hidden" style="margin-top:14px;">
       <div class="toolbar">
+        <button class="btn primary" id="btnExportCharts" style="display:none;">Export</button>
         <button class="btn" id="backFromCharts">Back</button>
         <button class="btn ghost" id="exitFromCharts">Exit</button>
       </div>
 
       <div class="sectionTitle">Charts</div>
+
+      <!-- Date options (default all) -->
+      <div class="logControls">
+        <div>
+          <div class="smallLabel">From</div>
+          <input id="chartFrom" type="date" />
+        </div>
+        <div>
+          <div class="smallLabel">To</div>
+          <input id="chartTo" type="date" />
+        </div>
+      </div>
+
       <div class="mutedBlock" id="chartHint"></div>
 
       <div class="chartBox" style="margin-top:10px;">
         <canvas id="chartCanvas" width="900" height="260" aria-label="Vitals chart" role="img"></canvas>
       </div>
-    </div>
-  </div>
-
-  <!-- ADD bottom buttons -->
-  <div id="addBottomBar" class="bottomBar hidden" aria-hidden="true">
-    <div class="bottomBarInner">
-      <button class="btn primary" id="saveAdd">Save</button>
-      <button class="btn" id="backFromAdd">Back</button>
-      <button class="btn ghost" id="exitFromAdd">Exit</button>
     </div>
   </div>
 
@@ -648,9 +652,7 @@ function fmtDateTimeLocal(iso){
 function isoDayKey(iso){
   const d = new Date(iso);
   if (!isValidDate(d)) return null;
-  const k = `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}`;
-  if (!/^\d{4}-\d{2}-\d{2}$/.test(k)) return null;
-  return k;
+  return `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}`;
 }
 
 function clampInt(v){
@@ -664,6 +666,13 @@ function escapeHTML(s){
   }[c]));
 }
 
+function parseYMD(s){
+  if (!s) return null;
+  const m = String(s).trim().match(/^(\d{4})-(\d{2})-(\d{2})$/);
+  if (!m) return null;
+  return s;
+}
+
 /* =========================
    Navigation
 ========================= */
@@ -673,16 +682,9 @@ const screens = {
   log: document.getElementById("screenLog"),
   charts: document.getElementById("screenCharts"),
 };
-const addBottomBar = document.getElementById("addBottomBar");
 
 function show(name){
   Object.keys(screens).forEach(k => screens[k].classList.toggle("hidden", k !== name));
-
-  // show bottom bar only on Add
-  const isAdd = (name === "add");
-  addBottomBar.classList.toggle("hidden", !isAdd);
-  addBottomBar.setAttribute("aria-hidden", String(!isAdd));
-
   refreshCounts();
   if (name === "log") renderLog();
   if (name === "charts") renderCharts();
@@ -706,14 +708,13 @@ document.getElementById("exitFromAdd").onclick = doExit;
 document.getElementById("exitFromLog").onclick = doExit;
 document.getElementById("exitFromCharts").onclick = doExit;
 
-document.getElementById("btnExportFromHome").onclick = () => {
-  show("log");
-  setTimeout(()=>doExport(), 50);
-};
-
 function refreshCounts(){
   const all = loadEntries();
   document.getElementById("homeCount").textContent = `Records: ${all.length}`;
+
+  // Export buttons only appear once there is data
+  document.getElementById("btnExportLog").style.display = all.length ? "" : "none";
+  document.getElementById("btnExportCharts").style.display = all.length ? "" : "none";
 }
 
 /* =========================
@@ -813,35 +814,11 @@ const elTo = document.getElementById("toDate");
 const elLogList = document.getElementById("logList");
 const elLogCount = document.getElementById("logCount");
 
-function buildDateOptions(entries){
-  const keys = [];
-  for (const e of entries){
-    const k = isoDayKey(e.ts);
-    if (k) keys.push(k);
-  }
-  const days = Array.from(new Set(keys)).sort().reverse();
-  const opts = ["(any)", ...days];
-
-  function setSelect(sel){
-    const prev = sel.value || "(any)";
-    sel.innerHTML = "";
-    opts.forEach(v => {
-      const o = document.createElement("option");
-      o.value = v;
-      o.textContent = v;
-      sel.appendChild(o);
-    });
-    sel.value = opts.includes(prev) ? prev : "(any)";
-  }
-  setSelect(elFrom);
-  setSelect(elTo);
-}
-
-function passesDateRange(entry, fromKey, toKey){
+function passesDateRange(entry, fromYMD, toYMD){
   const k = isoDayKey(entry.ts);
   if (!k) return false;
-  if (fromKey && fromKey !== "(any)" && k < fromKey) return false;
-  if (toKey && toKey !== "(any)" && k > toKey) return false;
+  if (fromYMD && k < fromYMD) return false;
+  if (toYMD && k > toYMD) return false;
   return true;
 }
 
@@ -860,15 +837,13 @@ function passesSearch(entry, q){
 function getFilteredEntries(){
   const entries = loadEntries();
   const q = String(elSearch.value || "").trim();
-  const fromKey = elFrom.value || "(any)";
-  const toKey = elTo.value || "(any)";
-  return entries.filter(e => passesDateRange(e, fromKey, toKey) && passesSearch(e, q));
+  const fromYMD = parseYMD(elFrom.value);
+  const toYMD = parseYMD(elTo.value);
+  return entries.filter(e => passesDateRange(e, fromYMD, toYMD) && passesSearch(e, q));
 }
 
 function renderLog(){
   const entries = loadEntries();
-  buildDateOptions(entries);
-
   const filtered = getFilteredEntries();
   elLogCount.textContent = `Showing: ${filtered.length} of ${entries.length}`;
 
@@ -934,16 +909,12 @@ function buildExportText(entries){
   return lines.join("\n").trim() + "\n";
 }
 
-async function doExport(){
-  const filtered = getFilteredEntries();
-  const text = buildExportText(filtered);
-
+async function copyText(text){
   try{
     await navigator.clipboard.writeText(text);
     alert("Export copied to clipboard.");
     return;
   }catch(e){}
-
   const ta = document.createElement("textarea");
   ta.value = text;
   ta.style.position = "fixed";
@@ -960,7 +931,10 @@ async function doExport(){
   document.body.removeChild(ta);
 }
 
-document.getElementById("btnExport").onclick = doExport;
+document.getElementById("btnExportLog").onclick = () => {
+  const filtered = getFilteredEntries();
+  copyText(buildExportText(filtered));
+};
 
 /* =========================
    Charts (no external libs)
@@ -968,22 +942,50 @@ document.getElementById("btnExport").onclick = doExport;
 const canvas = document.getElementById("chartCanvas");
 const ctx = canvas.getContext("2d");
 const chartHint = document.getElementById("chartHint");
+const chartFrom = document.getElementById("chartFrom");
+const chartTo = document.getElementById("chartTo");
+
+function getChartFiltered(){
+  const all = loadEntries().slice().reverse();
+  const fromYMD = parseYMD(chartFrom.value);
+  const toYMD = parseYMD(chartTo.value);
+  if (!fromYMD && !toYMD) return all;
+
+  return all.filter(e => passesDateRange(e, fromYMD, toYMD));
+}
 
 function renderCharts(){
-  const entries = loadEntries().slice().reverse();
-  if (entries.length < 2){
+  const all = loadEntries();
+  if (all.length < 2){
     chartHint.textContent = "Add at least 2 entries to show a chart.";
     ctx.clearRect(0,0,canvas.width,canvas.height);
     return;
   }
+
+  const data0 = getChartFiltered();
+  const data = data0.slice(Math.max(0, data0.length - 30));
+
+  if (data.length < 2){
+    chartHint.textContent = "Not enough entries in that date range (need at least 2).";
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    return;
+  }
+
   chartHint.textContent = "Systolic, Diastolic, and Heart Rate over time.";
 
-  const data = entries.slice(Math.max(0, entries.length - 30));
   const sys = data.map(e => e.sys);
   const dia = data.map(e => e.dia);
   const hr  = data.map(e => e.hr);
   drawChart(sys, dia, hr);
 }
+
+chartFrom.addEventListener("change", renderCharts);
+chartTo.addEventListener("change", renderCharts);
+
+document.getElementById("btnExportCharts").onclick = () => {
+  const data = getChartFiltered();
+  copyText(buildExportText(data.slice().reverse())); // export in newest-first order
+};
 
 function drawChart(sys, dia, hr){
   const W = canvas.width, H = canvas.height;
@@ -1064,7 +1066,12 @@ function drawChart(sys, dia, hr){
   leg("Heart Rate", "rgba(120,220,180,.92)");
 }
 
-/* initial */
+/* =========================
+   Buttons + init
+========================= */
+document.getElementById("btnExportLog").style.display = "none";
+document.getElementById("btnExportCharts").style.display = "none";
+
 show("home");
 </script>
 </body>
